styles.css
/* lists and bullets */
.bullet-plugin-better-lists .cm-s-obsidian .HyperMD-list-line {
  /* padding-top: 0.4em; */
}

.bullet-plugin-better-lists .cm-formatting-list-ul {
  margin-right: 0.3em;
}

.bullet-plugin-better-lists .list-bullet::after {
  width: 0.4em;
  height: 0.4em;
  background-color: var(--text-muted);
}

/* lines */
.bullet-plugin-vertical-lines
  .markdown-source-view.mod-cm6
  .cm-hmd-list-indent
  .cm-indent {
  cursor: pointer;
}

/* drag-n-drop */
.bullet-plugin-dropping-line {
  background-color: hsla(var(--interactive-accent-hsl), 0.4);
}

.bullet-plugin-dragging-line {
  opacity: 0.5;
  background-color: hsla(var(--interactive-accent-hsl), 0.2);
}

.bullet-plugin-drop-zone {
  width: 300px;
  height: 4px;
  background: var(--color-accent);
  border-radius: 2px;
  z-index: 999;
  position: absolute;
  pointer-events: none;
}

.bullet-plugin-drop-zone::before {
  content: "";
  position: absolute;
  left: 0;
  top: -4px;
  width: 2px;
  height: 12px;
  border-radius: 2px;
  background: var(--color-accent);
}

.bullet-plugin-drop-zone-inside {
  height: 6px;
  box-shadow: 0 0 0 2px hsla(var(--interactive-accent-hsl), 0.2);
}

.bullet-plugin-drop-zone-inside::before {
  width: 6px;
  height: 6px;
  top: 0;
  border-radius: 999px;
}

.bullet-plugin-drop-zone-padding {
  position: absolute;
  height: 4px;
}

body.bullet-plugin-dnd:not(.bullet-plugin-dragging) .cm-formatting-list,
body.bullet-plugin-dnd:not(.bullet-plugin-dragging)
  .cm-fold-indicator
  .collapse-indicator {
  cursor: grab !important;
}

html body.bullet-plugin-dnd.bullet-plugin-dragging {
  cursor: grabbing !important;
}

